<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feature_groups_groups">Groups</string>
    <string name="feature_groups_empty_groups_list">Empty GroupList</string>
    <string name="feature_groups_failed_to_load_db_groups">Failed to load Database Groups</string>
    <string name="feature_groups_failed_to_fetch_groups">Failed to Fetch Groups</string>
    <string name="feature_groups_no_more_groups_available">No more Groups Available</string>
    <string name="feature_groups_add_loan_account">Add Loan Account</string>
    <string name="feature_groups_add_savings_account">Add Savings Account</string>
    <string name="feature_groups_documents">Documents</string>
    <string name="feature_groups_group_clients">Group Clients</string>
    <string name="feature_groups_more_group_info">More Group Info</string>
    <string name="feature_groups_notes">Notes</string>
...
